--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c201e8e4",
+   "id": "9f6f4f0b",
    "metadata": {},
    "source": [
-    "# Example notebook for the functions contained in code_io.py"
+    "# Example notebook for the functions contained in cry_file_readwrite.py"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2aef46a7",
+   "id": "088435a1",
    "metadata": {},
    "source": [
     "#### Crystal_input class"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b07b85dc",
+   "id": "e09c931f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6901859",
+   "id": "ccddbbae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16834121",
+   "id": "c4df1a0f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85440549",
+   "id": "9d37e548",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "664816c4",
+   "id": "b22eca20",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ace6b8ec",
+   "id": "b5c03a7e",
    "metadata": {},
    "outputs": [],
    "source": []
