Add input example to cry_file_readwrite_examples

--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f6f4f0b",
+   "id": "dbfc4852",
    "metadata": {},
    "source": [
     "# Example notebook for the functions contained in cry_file_readwrite.py"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "088435a1",
+   "id": "aaa2adcc",
    "metadata": {},
    "source": [
     "#### Crystal_input class"
@@ -18,57 +18,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e09c931f",
+   "execution_count": 1,
+   "id": "274797d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.insert(1, '../')\n",
     "\n",
-    "#from cry_file_readwrite import Crystal_input\n",
-    "import cry_file_readwrite"
+    "from cry_file_readwrite import Crystal_input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ddfcf8",
+   "metadata": {},
+   "source": [
+    "Create a crystal input object"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ccddbbae",
+   "execution_count": 5,
+   "id": "bd68f92d",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c4df1a0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d37e548",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b22eca20",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b5c03a7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cry_file_readwrite.Crystal_input at 0x7f900181a100>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo = Crystal_input('data/mgo.d12')\n",
+    "mgo"
+   ]
   }
  ],
  "metadata": {
