Add Bands and Doss examples to cry_file_readwrite_examples

--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b16b3470",
+   "id": "5d55c1e9",
    "metadata": {},
    "source": [
     "# Example notebook for the functions contained in cry_file_readwrite.py"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eecbd74",
+   "id": "cc199b84",
    "metadata": {},
    "source": [
     "### Crystal_input class"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0c2bfb55",
+   "id": "720019fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb1f5553",
+   "id": "bdd19ae7",
    "metadata": {},
    "source": [
     "Create a crystal input object"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "780e3bfa",
+   "id": "d151c2aa",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "302f3a35",
+   "id": "1b5204ce",
    "metadata": {},
    "source": [
     "### Crystal_output class"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9301b759",
+   "id": "bf4f8546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "fe681d7b",
+   "id": "ec7ca145",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6e1698",
+   "id": "326bd064",
    "metadata": {},
    "source": [
     "#### Functions and properties"
@@ -113,8 +113,10 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "acc2ca02",
-   "metadata": {},
+   "id": "bc35f146",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -265,12 +267,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "86d24d50",
+   "metadata": {},
+   "source": [
+    "### Bands class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b4c9b80f",
+   "execution_count": 1,
+   "id": "f342fa0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from cry_file_readwrite import Crystal_bands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c3a7755c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cry_file_readwrite.Crystal_bands at 0x7fcbd000f6a0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_bands = Crystal_bands('data/mgo.out')\n",
+    "mgo_bands"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3840b7f8",
+   "metadata": {},
+   "source": [
+    "### Doss class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "588223d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from cry_file_readwrite import Crystal_doss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4831eb51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cry_file_readwrite.Crystal_doss at 0x7fbcc000f220>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mgo_doss = Crystal_doss('data/mgo.out')\n",
+    "mgo_doss"
+   ]
   }
  ],
  "metadata": {
