Add write input examples

--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5d55c1e9",
+   "id": "68158073",
    "metadata": {},
    "source": [
     "# Example notebook for the functions contained in cry_file_readwrite.py"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc199b84",
+   "id": "56179e55",
    "metadata": {},
    "source": [
     "### Crystal_input class"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "720019fb",
+   "id": "032121ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd19ae7",
+   "id": "cbfdbe40",
    "metadata": {},
    "source": [
     "Create a crystal input object"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d151c2aa",
+   "id": "ed435d4f",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b5204ce",
+   "id": "fe2d3647",
    "metadata": {},
    "source": [
     "### Crystal_output class"
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bf4f8546",
+   "id": "0a495139",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec7ca145",
+   "id": "bfb6e6f8",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "326bd064",
+   "id": "58b3f761",
    "metadata": {},
    "source": [
     "#### Functions and properties"
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bc35f146",
+   "id": "0bf048c7",
    "metadata": {
     "collapsed": true
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86d24d50",
+   "id": "bb1f72fe",
    "metadata": {},
    "source": [
     "### Bands class"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f342fa0e",
+   "id": "844eb99c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c3a7755c",
+   "id": "9603f104",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3840b7f8",
+   "id": "17e06d40",
    "metadata": {},
    "source": [
     "### Doss class"
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "588223d1",
+   "id": "da296dbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,8 +333,10 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4831eb51",
-   "metadata": {},
+   "id": "ec69cfae",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -350,6 +352,139 @@
    "source": [
     "mgo_doss = Crystal_doss('data/mgo.out')\n",
     "mgo_doss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a42b438f",
+   "metadata": {},
+   "source": [
+    "### write_cry_input function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2417bd82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from cry_file_readwrite import Crystal_input\n",
+    "from cry_file_readwrite import write_cry_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f008e190",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write input starting from original input\n",
+    "#Read the original input\n",
+    "mgo_original_input = Crystal_input('data/mgo.d12')\n",
+    "\n",
+    "#Write the input\n",
+    "new_input_name = 'data/mgo_from_file.d12'\n",
+    "write_cry_input(new_input_name,crystal_input=mgo_original_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c894748b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write input starting from blocks\n",
+    "#Define the blocks\n",
+    "geom_block = ['MGO BULK - GEOMETRY TEST\\n',\n",
+    " 'CRYSTAL\\n',\n",
+    " '0 0 0\\n',\n",
+    " '225\\n',\n",
+    " '4.217\\n',\n",
+    " '2\\n',\n",
+    " '12 0.    0.    0.\\n',\n",
+    " '8 0.5   0.5   0.5\\n',\n",
+    " 'END\\n']\n",
+    "bs_block = ['12 4\\n',\n",
+    " '0 0 8 2.0 1.0\\n',\n",
+    " ' 68370.0 0.0002226\\n',\n",
+    " ' 9661.0 0.001901\\n',\n",
+    " ' 2041.0 0.011042\\n',\n",
+    " ' 529.6 0.05005\\n',\n",
+    " ' 159.17 0.1690\\n',\n",
+    " ' 54.71 0.36695\\n',\n",
+    " ' 21.236 0.4008\\n',\n",
+    " ' 8.791 0.1487\\n',\n",
+    " '0 1 5 8.0 1.0\\n',\n",
+    " ' 143.7 -0.00671 0.00807\\n',\n",
+    " ' 31.27 -0.07927 0.06401\\n',\n",
+    " ' 9.661 -0.08088 0.2092\\n',\n",
+    " ' 3.726 0.2947 0.3460\\n',\n",
+    " ' 1.598 0.5714 0.3731\\n',\n",
+    " '0 1 1 2.0 1.0\\n',\n",
+    " ' 0.688 1.0 1.0\\n',\n",
+    " '0 1 1 0.0 1.0\\n',\n",
+    " ' 0.28 1.0 1.0\\n',\n",
+    " '8 4\\n',\n",
+    " '0 0 8 2.0 1.0\\n',\n",
+    " ' 8020.0 0.00108\\n',\n",
+    " ' 1338.0 0.00804\\n',\n",
+    " ' 255.4 0.05324\\n',\n",
+    " ' 69.22 0.1681\\n',\n",
+    " ' 23.90 0.3581\\n',\n",
+    " ' 9.264 0.3855\\n',\n",
+    " ' 3.851 0.1468\\n',\n",
+    " ' 1.212 0.0728\\n',\n",
+    " '0 1 4 6.0 1.0\\n',\n",
+    " ' 49.43 -0.00883 0.00958\\n',\n",
+    " ' 10.47 -0.0915 0.0696\\n',\n",
+    " ' 3.235 -0.0402 0.2065\\n',\n",
+    " ' 1.217 0.379 0.347\\n',\n",
+    " '0 1 1 0.0 1.0\\n',\n",
+    " ' 0.4764 1.0 1.0\\n',\n",
+    " '0 1 1 0.0 1.0\\n',\n",
+    " ' 0.1802 1.0 1.0\\n',\n",
+    " '99 0\\n',\n",
+    " 'ENDBS\\n']\n",
+    "func_block = ['DFT\\n', 'B3LYP\\n', 'XXLGRID\\n', 'ENDDFT\\n']\n",
+    "scf_block = [['TOLINTEG\\n', '7 7 7 7 14\\n'],\n",
+    " ['SHRINK\\n', '12 24\\n'],\n",
+    " ['MAXCYCLE\\n', '200\\n'],\n",
+    " ['FMIXING\\n', '70\\n'],\n",
+    " 'DIIS\\n',\n",
+    " 'ENDSCF\\n']\n",
+    "\n",
+    "#Write the input\n",
+    "new_input_name = 'data/mgo_from_blocks.d12'\n",
+    "write_cry_input(new_input_name,crystal_blocks=[geom_block,bs_block,func_block,scf_block])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a5e86f39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write input for external object (ASE or pymatgen)\n",
+    "#Start from original inout \n",
+    "mgo_original_input = Crystal_input('data/mgo.d12')\n",
+    "\n",
+    "#Generate the external object\n",
+    "from pymatgen.core import Structure, Lattice             \n",
+    "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
+    "\n",
+    "substrate = Structure.from_spacegroup(\"Fm-3m\", Lattice.cubic(4.217), [\"Mg\",\"O\"], [[0, 0, 0],[0.5,0.5,0.5]])\n",
+    "substrate_primitive = SpacegroupAnalyzer(substrate).get_primitive_standard_structure() \n",
+    "\n",
+    "#Write the input\n",
+    "new_input_name = 'data/mgo_external_obj.d12'\n",
+    "write_cry_input(new_input_name,crystal_input=mgo_original_input,external_obj=substrate_primitive)"
    ]
   }
  ],
