Add forces examples to cry_file_readwrite_examples

--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -39,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ed435d4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_input at 0x7f900181a100>"
+       "<cry_file_readwrite.Crystal_input at 0x7fa608d17370>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0a495139",
    "metadata": {},
    "outputs": [],
@@ -82,23 +82,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "bfb6e6f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_output at 0x7ff2680286a0>"
+       "<cry_file_readwrite.Crystal_output at 0x7fa608d17d60>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mgo_output = Crystal_output('data/mgo.out')\n",
+    "mgo_output = Crystal_output('data/mgo_optgeom.out')\n",
     "mgo_output"
    ]
   },
@@ -112,11 +112,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0bf048c7",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -139,8 +137,8 @@
       "Band gap = 7.1237 eV \n",
       "\n",
       "Last geometry = \n",
-      " [[12.   0.   0.   0. ]\n",
-      " [ 8.  -0.5 -0.5 -0.5]] \n",
+      " [[ 0.          0.          0.        ]\n",
+      " [-2.12011001 -2.12011001 -2.12011001]] \n",
       "\n",
       "Symmetry operators = \n",
       " [['1.00' '0.00' '0.00' '0.00' '1.00' '0.00' '0.00' '0.00' '1.00' '0.00'\n",
@@ -239,6 +237,16 @@
       "  '0.00' '0.00' '0.00']\n",
       " ['1.00' '0.00' '0.00' '-1.00' '-1.00' '-1.00' '0.00' '0.00' '1.00'\n",
       "  '0.00' '0.00' '0.00']] \n",
+      "\n",
+      "Forces on atoms = \n",
+      " [[-4.18889278e-16 -4.11372640e-16 -4.14981546e-16]\n",
+      " [ 4.14263349e-16  4.13107364e-16  4.14981546e-16]] \n",
+      " Forces on cell = \n",
+      " [[-0.00148273  0.00148273  0.00148273]\n",
+      " [ 0.00148273 -0.00148273  0.00148273]\n",
+      " [ 0.00148273  0.00148273 -0.00148273]] \n",
+      " Gradient = \n",
+      " ['0.020466', '0.004693', '0.000069', '0.000032'] \n",
       "\n"
      ]
     }
@@ -260,10 +268,16 @@
     "print(\"Band gap = %s eV \\n\" % mgo_output.get_band_gap())\n",
     "\n",
     "#Last geometry\n",
-    "print(\"Last geometry = \\n %s \\n\" % mgo_output.extract_last_geom(print_cart=True))\n",
+    "mgo_output.extract_last_geom(print_cart=False)\n",
+    "print(\"Last geometry = \\n %s \\n\" % mgo_output.atom_positions_cart)\n",
     "\n",
     "#Symmetry operators\n",
-    "print(\"Symmetry operators = \\n %s \\n\" % mgo_output.symm_ops())"
+    "print(\"Symmetry operators = \\n %s \\n\" % mgo_output.symm_ops())\n",
+    "\n",
+    "#Forces\n",
+    "print(\"Forces on atoms = \\n %s \\n Forces on cell = \\n %s \\n Gradient = \\n %s \\n\" % (mgo_output.forces(grad=True)[0],\n",
+    "                                                                                    mgo_output.forces(grad=True)[1],\n",
+    "                                                                                    mgo_output.grad))"
    ]
   },
   {
@@ -276,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "844eb99c",
    "metadata": {},
    "outputs": [],
@@ -289,23 +303,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "9603f104",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_bands at 0x7fcbd000f6a0>"
+       "<cry_file_readwrite.Crystal_bands at 0x7fa5f8a732e0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mgo_bands = Crystal_bands('data/mgo.out')\n",
+    "mgo_bands = Crystal_bands('data/mgo_BAND_dat.BAND')\n",
     "mgo_bands"
    ]
   },
@@ -319,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "da296dbc",
    "metadata": {},
    "outputs": [],
@@ -332,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ec69cfae",
    "metadata": {
     "scrolled": true
@@ -341,16 +355,16 @@
     {
      "data": {
       "text/plain": [
-       "<cry_file_readwrite.Crystal_doss at 0x7fbcc000f220>"
+       "<cry_file_readwrite.Crystal_doss at 0x7fa5f8a70250>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mgo_doss = Crystal_doss('data/mgo.out')\n",
+    "mgo_doss = Crystal_doss('data/mgo_DOSS_dat.DOSS')\n",
     "mgo_doss"
    ]
   },
@@ -364,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2417bd82",
    "metadata": {},
    "outputs": [],
@@ -378,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "f008e190",
    "metadata": {},
    "outputs": [],
@@ -394,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "c894748b",
    "metadata": {},
    "outputs": [],
@@ -466,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "a5e86f39",
    "metadata": {},
    "outputs": [],
