Add doss and pdoss examples

--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f411be3f",
+   "id": "ead43d9d",
    "metadata": {},
    "outputs": [
     {
@@ -594,16 +594,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac2c7d06",
+   "id": "17f3027e",
    "metadata": {},
    "source": [
-    "### write_cry_input function"
+    "### write_cry_properties function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b110038",
+   "metadata": {},
+   "source": [
+    "#### bands"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "c06d6b46",
+   "execution_count": 1,
+   "id": "960ee949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,8 +637,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "85313fcd",
+   "execution_count": 2,
+   "id": "5c8532ca",
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +649,7 @@
       "12 24\r\n",
       "1 0\r\n",
       "BAND\r\n",
-      "Bands\r\n",
+      "BAND STRUCTURE CALCULATION\r\n",
       "3 4 200 1 26 0 1\r\n",
       "0 0 0  2 0 0\r\n",
       "2 0 0  2 2 2\r\n",
@@ -652,6 +660,120 @@
    ],
    "source": [
     "!cat data/bands_input.d3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f7be16a",
+   "metadata": {},
+   "source": [
+    "#### doss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d8243cd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from cry_file_readwrite import write_cry_properties\n",
+    "from cry_properties import cry_newk, cry_doss\n",
+    "\n",
+    "#Prepare the newk_block\n",
+    "newk_block = cry_newk(12,24)\n",
+    "\n",
+    "#Prepare the doss_block\n",
+    "\n",
+    "doss_block = cry_doss(n_points=200,e_range=[-5,15],plotting_option=2,poly=12,print_option=1)\n",
+    "\n",
+    "#Write the input\n",
+    "write_cry_properties('data/doss_input.d3',doss_block,newk_block)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "17d9c58a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NEWK\r\n",
+      "12 24\r\n",
+      "1 0\r\n",
+      "DOSS\r\n",
+      "0 200 -1 -1 2 12 1\r\n",
+      "-0.18374651800348382 0.5512395540104514\r\n",
+      "END\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat data/doss_input.d3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49c3a100",
+   "metadata": {},
+   "source": [
+    "#### pdoss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0f0fc8d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from cry_file_readwrite import write_cry_properties\n",
+    "from cry_properties import cry_newk, cry_pdoss\n",
+    "\n",
+    "#Prepare the newk_block\n",
+    "newk_block = cry_newk(12,24)\n",
+    "\n",
+    "#Prepare the pdoss_block\n",
+    "projections = [[1],[2]]\n",
+    "pdoss_block = cry_pdoss(projections,proj_type='atom',n_points=200,band_range=[1,26],\n",
+    "                       plotting_option=2,poly=12,print_option=1)\n",
+    "\n",
+    "#Write the input\n",
+    "write_cry_properties('data/pdoss_input.d3',pdoss_block,newk_block)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "31354596",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NEWK\r\n",
+      "12 24\r\n",
+      "1 0\r\n",
+      "DOSS\r\n",
+      "2 200 1 26 2 12 1\r\n",
+      "-1 1\r\n",
+      "-1 2\r\n",
+      "END\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat data/pdoss_input.d3"
    ]
   }
  ],
