Add band plotting examples

--- a/examples/cry_file_readwrite_examples.ipynb
+++ b/examples/cry_file_readwrite_examples.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "2417bd82",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "f008e190",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "c894748b",
    "metadata": {},
    "outputs": [],
@@ -490,8 +490,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ead43d9d",
+   "execution_count": 15,
+   "id": "716ee7d0",
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17f3027e",
+   "id": "ac37f16d",
    "metadata": {},
    "source": [
     "### write_cry_properties function"
@@ -602,16 +602,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b110038",
+   "id": "1c9d3903",
    "metadata": {},
    "source": [
-    "#### bands"
+    "#### bands from k points coordinates"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "960ee949",
+   "id": "1aa05d78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,13 +632,13 @@
     "bands_block = cry_bands(k_path,n_kpoints,first_band,last_band)\n",
     "\n",
     "#Write the input\n",
-    "write_cry_properties('data/bands_input.d3',bands_block,newk_block)"
+    "write_cry_properties('data/bands_input_1.d3',bands_block,newk_block)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5c8532ca",
+   "id": "94d3ed96",
    "metadata": {},
    "outputs": [
     {
@@ -659,12 +659,92 @@
     }
    ],
    "source": [
-    "!cat data/bands_input.d3"
+    "!cat data/bands_input_1.d3"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7f7be16a",
+   "id": "b74efb1e",
+   "metadata": {},
+   "source": [
+    "#### bands from pymatgen HighSymmKpath object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9698e3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from pymatgen.symmetry.bandstructure import HighSymmKpath\n",
+    "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
+    "from cry_file_readwrite import write_cry_properties\n",
+    "from cry_file_readwrite import Crystal_output\n",
+    "from cry_convert import cry_out2pmg\n",
+    "from cry_properties import cry_bands, cry_newk\n",
+    "\n",
+    "#Prepare the newk_block\n",
+    "newk_block = cry_newk(12,24)\n",
+    "\n",
+    "#Read the structure\n",
+    "mgo = Crystal_output('data/mgo.out')\n",
+    "mgo = cry_out2pmg(mgo)\n",
+    "mgo_prim = SpacegroupAnalyzer(mgo).get_primitive_standard_structure(international_monoclinic=False)\n",
+    "\n",
+    "#Obtain the k path object\n",
+    "k_path = HighSymmKpath(mgo_prim)\n",
+    "\n",
+    "n_kpoints = 200\n",
+    "first_band = 1\n",
+    "last_band = 26\n",
+    "bands_block = cry_bands(k_path,n_kpoints,first_band,last_band)\n",
+    "\n",
+    "#Write the input\n",
+    "write_cry_properties('data/bands_input_2.d3',bands_block,newk_block)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "248e9606",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NEWK\r\n",
+      "12 24\r\n",
+      "1 0\r\n",
+      "BAND\r\n",
+      "BAND STRUCTURE CALCULATION\r\n",
+      "11 8 200 1 26 0 1\r\n",
+      "0 0 0  4 0 4\r\n",
+      "4 0 4  4 2 5\r\n",
+      "4 2 5  2 2 5\r\n",
+      "2 2 5  0 0 0\r\n",
+      "0 0 0  4 4 4\r\n",
+      "4 4 4  5 2 5\r\n",
+      "5 2 5  4 2 5\r\n",
+      "4 2 5  4 4 4\r\n",
+      "4 4 4  2 2 5\r\n",
+      "2 2 5  5 2 5\r\n",
+      "5 2 5  4 0 4\r\n",
+      "END\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat data/bands_input_2.d3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b252258",
    "metadata": {},
    "source": [
     "#### doss"
@@ -673,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8243cd5",
+   "id": "1ce65af5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "17d9c58a",
+   "id": "58a3e00e",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +800,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49c3a100",
+   "id": "503866da",
    "metadata": {},
    "source": [
     "#### pdoss"
@@ -729,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0f0fc8d8",
+   "id": "62c51e8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "31354596",
+   "id": "85e99284",
    "metadata": {},
    "outputs": [
     {
