--- a/examples/cry_properties.ipynb
+++ b/examples/cry_properties.ipynb
@@ -73,6 +73,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c4ec7db",
+   "metadata": {},
+   "source": [
+    "#### k path specified as list of k point coordinates (fractional)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "1cf0add3",
@@ -106,7 +114,71 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf1d56f9",
+   "id": "cbe6d771",
+   "metadata": {},
+   "source": [
+    "#### k path specified as pymatgen HighSymmKpath object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fe83bc1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['BAND\\n',\n",
+       " 'BAND STRUCTURE CALCULATION\\n',\n",
+       " '11 8 200 1 26 0 1\\n',\n",
+       " '0 0 0  4 0 4\\n',\n",
+       " '4 0 4  4 2 5\\n',\n",
+       " '4 2 5  2 2 5\\n',\n",
+       " '2 2 5  0 0 0\\n',\n",
+       " '0 0 0  4 4 4\\n',\n",
+       " '4 4 4  5 2 5\\n',\n",
+       " '5 2 5  4 2 5\\n',\n",
+       " '4 2 5  4 4 4\\n',\n",
+       " '4 4 4  2 2 5\\n',\n",
+       " '2 2 5  5 2 5\\n',\n",
+       " '5 2 5  4 0 4\\n',\n",
+       " 'END\\n']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../')\n",
+    "\n",
+    "from pymatgen.symmetry.bandstructure import HighSymmKpath\n",
+    "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
+    "from cry_file_readwrite import Crystal_output\n",
+    "from cry_convert import cry_out2pmg\n",
+    "from cry_properties import cry_bands\n",
+    "\n",
+    "#Read the structure\n",
+    "mgo = Crystal_output('data/mgo.out')\n",
+    "mgo = cry_out2pmg(mgo)\n",
+    "mgo_prim = SpacegroupAnalyzer(mgo).get_primitive_standard_structure(international_monoclinic=False)\n",
+    "\n",
+    "#Obtain the k path object\n",
+    "k_path = HighSymmKpath(mgo_prim)\n",
+    "\n",
+    "n_kpoints = 200\n",
+    "first_band = 1\n",
+    "last_band = 26\n",
+    "bands_block = cry_bands(k_path,n_kpoints,first_band,last_band)\n",
+    "bands_block"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c62460a9",
    "metadata": {},
    "source": [
     "### doss"
@@ -115,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0f9173fa",
+   "id": "5384e5a4",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "79757419",
+   "id": "adfe9a91",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7feeccb4",
+   "id": "f60dec0c",
    "metadata": {},
    "source": [
     "### pdoss"
@@ -182,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ae71c680",
+   "id": "bc6ca24f",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "829a7b2c",
+   "id": "cfcf35de",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "db9ff4d2",
+   "id": "4e4197b8",
    "metadata": {},
    "outputs": [
     {
